# aws-lambda-cpp-samples

aws-lambda-intel-ipp/: CMakeLists.txt  main.cpp
aws-lambda-intel-ipp/cmake/: FindIPP.cmake
aws-lambda-jpeg/: CMakeLists.txt  DSCF7250.base64  main.cpp  test.cpp
aws-lambda-libav/: CMakeLists.txt  main.cpp
aws-lambda-libav/test/: test.c  test.cpp
aws-lambda-utsname/: CMakeLists.txt  README.md  main.cpp
aws-lambda-zimg/: CMakeLists.txt  Dockerfile  main.cpp  test.cpp
